apps/app-admin/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-admin
spec:
  selector:
    app: app-admin
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
